--- a/plugin_store/templates/plugin_browser.html
+++ b/plugin_store/templates/plugin_browser.html
@@ -3,9 +3,6 @@
 
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/vue@3"></script>
 </head>
 
@@ -34,12 +31,11 @@
                             <img v-bind:src="plugin.image">
                         </div>
                         <div class="col">
-                            <h5 class="card-title">{{ plugin.name }}</h5>
+                            <h5 class="card-title">{{ plugin.artifact }}</h5>
                             <p class="card-text">
-                                <span class="badge alert-dark" style="margin-right: 5px;">Version: {{ plugin.version
-                                    }}</span>
-                                <span class="badge alert-dark" style="margin-right: 5px;">Author: {{ plugin.author
-                                    }}</span>
+                                <span class="badge alert-dark" style="margin-right: 5px;">Version: {{ plugin.version }}</span>
+                                <span class="badge alert-dark" style="margin-right: 5px;">Author: {{ plugin.author }}</span>
+                                <span v-if="plugin.tags.includes('root')" class="badge alert-danger" style="margin-right: 5px;">Requires root</span>
                             </p>
                             <p class="card-text">
                                 <span>Tags: </span>
@@ -48,25 +44,9 @@
                             </p>
                             <p class="card-text">{{ plugin.description }}</p>
                             <button class="btn btn-primary" v-on:click="installPlugin(plugin.artifact, plugin.version, plugin.hash)"
-                                data-toggle="modal" data-target="#help-modal">Install</button>
+                             >Install</button>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="help-modal" tabindex="-1" role="dialog" aria-labelledby="help-modal-label"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="help-modal-label">Check your plugin menu!</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <img style="width: 100%;" src="https://cdn.tzatzikiweeb.moe/file/steam-deck-homebrew/check_plugin_menu.png">
                 </div>
             </div>
         </div>
@@ -104,7 +84,7 @@
             mounted: function () {
                 this.loadPlugins();
             }
-        }).mount('#mainBind')
+        }).mount('#mainBind');
     </script>
 </body>
 
