--- a/plugin_store/templates/plugin_browser.html
+++ b/plugin_store/templates/plugin_browser.html
@@ -3,6 +3,9 @@
 
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/vue@3"></script>
 </head>
 
@@ -33,9 +36,10 @@
                         <div class="col">
                             <h5 class="card-title">{{ plugin.artifact }}</h5>
                             <p class="card-text">
-                                <span class="badge alert-dark" style="margin-right: 5px;">Version: {{ plugin.version }}</span>
-                                <span class="badge alert-dark" style="margin-right: 5px;">Author: {{ plugin.author }}</span>
-                                <span v-if="plugin.tags.includes('root')" class="badge alert-danger" style="margin-right: 5px;">Requires root</span>
+                                <span class="badge alert-dark" style="margin-right: 5px;">Author: {{ plugin.author
+                                    }}</span>
+                                <span v-if="plugin.tags.includes('root')" class="badge alert-danger"
+                                    style="margin-right: 5px;">Requires root</span>
                             </p>
                             <p class="card-text">
                                 <span>Tags: </span>
@@ -43,8 +47,15 @@
                                     style="margin-right: 5px;">{{ tag }}</span>
                             </p>
                             <p class="card-text">{{ plugin.description }}</p>
-                            <button class="btn btn-primary" v-on:click="installPlugin(plugin.artifact, plugin.version, plugin.hash)"
-                             >Install</button>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-primary" v-on:click="installPlugin(plugin.artifact, plugin.selected_version)">Install {{ plugin.selected_version }}</button>
+                                <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                </button>
+                                <div class="dropdown-menu">
+                                    <a v-for="hash, version in plugin.versions" class="dropdown-item" v-on:click="plugin.selected_version = version">{{ version }}</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -62,17 +73,24 @@
             methods: {
                 loadPlugins: async function () {
                     let data = await (await fetch("/get_plugins")).json();
+                    for (const plugin in data) {
+                        data[plugin]['selected_version'] = Object.keys(data[plugin].versions)[0];
+                    }
+                    data.version
                     this.plugins = data;
                 },
                 searchPlugins: async function () {
                     let data = await (await fetch(`/search?query=${this.search_input}`)).json();
+                    for (const plugin in data) {
+                        data[plugin]['selected_version'] = Object.keys(data[plugin].versions)[0];
+                    }
                     this.plugins = data;
                 },
-                installPlugin: async function (artifact, version, hash) {
+                installPlugin: async function (artifact, version, ) {
                     const formData = new FormData();
                     formData.append("artifact", artifact);
                     formData.append("version", version);
-                    formData.append("hash", hash)
+                    formData.append("hash", this.plugins.find(x => x.artifact == artifact).versions[version]);
                     let res = await fetch("http://localhost:1337/browser/install_plugin", {
                         method: "POST",
                         body: formData,
