--- a/plugin_store/templates/plugin_browser.html
+++ b/plugin_store/templates/plugin_browser.html
@@ -31,7 +31,7 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-3">
-                            <img v-bind:src="plugin.image">
+                            <img v-bind:src="'https://cdn.tzatzikiweeb.moe/file/steam-deck-homebrew/artifact_images/'+plugin.artifact.replace('/', '_')+'.png'">
                         </div>
                         <div class="col">
                             <h5 class="card-title">{{ plugin.artifact }}</h5>
