--- a/plugin_store/templates/plugin_browser.html
+++ b/plugin_store/templates/plugin_browser.html
@@ -31,7 +31,7 @@
           <div class="row">
             <div class="col-3">
               <img
-                v-bind:src="'https://cdn.tzatzikiweeb.moe/file/steam-deck-homebrew/artifact_images/'+plugin.name.replace('/', '_')+'.png'"
+                v-bind:src="plugin.image_url"
                 class="img-fluid rounded-start">
             </div>
             <div class="col">
